[package]
name = "jwt"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
subtle = "2.2"
thiserror = "1.0"